[package]
name = "hyperfuel"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hyperfuel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "serde"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = "1.9"

dict_derive = "0.5.0"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

skar-client-fuel = "0.0.7"
skar-net-types-fuel = "0.0.3"
skar-format-fuel = "0.0.4"

anyhow = "1"
prefix-hex = "0.7.1"
env_logger = "0.11"
itertools = "0.12.1"
faster-hex = "0.9.0"
arrow2 = "0.18.0"

[profile.no_lto]
inherits = "release"
lto = "off"
